2006-04-03  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hildon-navogator-main.c: 
	  (load_navigator_plugin_list) Fix the leak the library string

2006-04-03  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.h: localize the "Favourites" string
	  (Closes N#25393)
	* configure.ac: 2.6.6

2006-04-03  Johan Bilien <johan.bilien@nokia.com>

	* */*: Corrected some deprecated logical ids.
	* configure.ac: 2.6.5

2006-04-03  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-watchable-app.c: (Closes N#24483)
	  - Replaced gtk_infoprint with hildon_banne_
	  - Removed message stacking work around, which seems no longer necessary
	* hildon-status-bar/hildon-status-bar-main.c: Replaced gtk_infoprint
	  with hildon_banner_

2006-03-31  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c: Fixed a potential crash
	  I just introduced

2006-03-31  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c: load the folder icon only once
	  (Closes N#25288)

2006-03-31  Johan Bilien <johan.bilien@nokia.com>

	* Added hildon-home/hildon-home-restore-background.sh
	* hildon-home/hildon-home-restore-background.sh: Restores the
	  default background after a backup from older releases is
	  restored (Closes N#23524)

2006-03-30  Marius Vollmer  <marius.vollmer@nokia.com>

	* hildon-navigator/osso-manager.c (osso_manager_infoprint): Free
	  retval (Closes N#20883)

2006-03-30  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/home-select-applet-dialog.c: Localize the applet
	  name (Closes N#25271)

2006-03-30  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c, hildon-navigator/others-menu.c:
	  fixed numerous (and big) memory leaks in menu generation.

2006-03-30  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.h: Fixed L10n of the
	  set background dialog title (id has changed in the UI spec).

2006-03-30  Johan Bilien <johan.bilien@nokia.com>
