@@ -1,3 +1,8 @@
+2006-04-04  Johan Bilien <johan.bilien@nokia.com>
+
+	* hildon-home/hildon-home-main.c: Fixed possible leaks of
+	  ugly global variable home_bg_image_uri
+
 2006-04-03  Johan Bilien <johan.bilien@nokia.com>
 
 	* hildon-navigator/hildon-navogator-main.c: 
